--- a/index.html
+++ b/index.html
@@ -1,1 +1,278 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kişisel Portfolyo ve Oyun Dünyası</title>
+    <style>
+        :root {
+            --primary: #2563eb;
+            --dark: #1e293b;
+            --light: #f8fafc;
+            --accent: #f59e0b;
+        }
 
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            background-color: var(--light);
+            color: var(--dark);
+        }
+
+        /* Header & Navigation */
+        header {
+            background-color: var(--dark);
+            color: white;
+            padding: 1rem 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 20px;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-weight: 500;
+            cursor: pointer;
+        }
+
+        .nav-links a:hover { color: var(--accent); }
+
+        .version-area {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .btn-log {
+            background: var(--accent);
+            border: none;
+            padding: 5px 10px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        /* Main Content */
+        main { padding: 2rem; max-width: 1000px; margin: auto; }
+
+        .hero { text-align: center; padding: 3rem 0; }
+
+        /* Modal (Günlükler) */
+        #logModal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 2rem;
+            box-shadow: 0 0 20px rgba(0,0,0,0.5);
+            z-index: 2000;
+            width: 80%;
+            max-height: 80vh;
+            overflow-y: auto;
+        }
+
+        table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        th { background-color: var(--dark); color: white; }
+
+        /* Oyunlar Bölümü */
+        .game-container { display: none; text-align: center; margin-top: 20px; }
+        .game-menu { display: flex; justify-content: center; gap: 20px; margin-bottom: 20px; }
+        .game-card { 
+            cursor: pointer; border: 2px solid #ddd; padding: 10px; border-radius: 8px;
+            transition: 0.3s; width: 120px; text-align: center;
+        }
+        .game-card:hover { border-color: var(--primary); background: #e2e8f0; }
+        .game-card i { font-size: 2rem; display: block; }
+
+        canvas { background: #000; display: block; margin: 0 auto; border: 4px solid #333; }
+
+        .close-btn { float: right; cursor: pointer; color: red; font-weight: bold; }
+    </style>
+</head>
+<body>
+
+<header>
+    <div class="author"><strong>Hazırlayan: [Adın Soyadın]</strong></div>
+    
+    <nav class="nav-links">
+        <a onclick="showSection('home')">Ana Sayfa</a>
+        <a onclick="showSection('games')">Oyunlar</a>
+        <a onclick="showSection('notes')">Ders Notları</a>
+        <a onclick="showSection('movies')">Filmler</a>
+    </nav>
+
+    <div class="version-area">
+        <span>v1.0.2</span>
+        <button class="btn-log" onclick="toggleLogs()">Günlükler</button>
+    </div>
+</header>
+
+<main>
+    <section id="home-section">
+        <div class="hero">
+            <h1>Hoş Geldiniz! 👋</h1>
+            <p>Merhaba! Ben bir yazılım geliştirici adayıyım. Bu platformda projelerimi, aldığım notları ve sevdiğim içerikleri paylaşıyorum.</p>
+            <div style="background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3>Hakkımda</h3>
+                <p>Teknolojiye meraklı, öğrenmeyi seven ve oyun geliştirmeye ilgi duyan biriyim. Aşağıdaki menüden oyunlarımı test edebilirsin!</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="games-section" style="display:none;">
+        <h2 style="text-align: center;">Oyun Salonu</h2>
+        <div class="game-menu">
+            <div class="game-card" onclick="startSnake()">
+                <i>🐍</i>
+                <span>Yılan</span>
+            </div>
+            <div class="game-card" onclick="startTetris()">
+                <i>🧱</i>
+                <span>Tetris</span>
+            </div>
+            <div class="game-card" onclick="alert('Pacman Yakında Eklenecek!')">
+                <i>🍕</i>
+                <span>Pacman</span>
+            </div>
+        </div>
+        <div id="game-canvas-wrapper" class="game-container">
+            <h3 id="game-title">Oyun Yükleniyor...</h3>
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+            <p>Yön tuşlarını kullanın!</p>
+        </div>
+    </section>
+
+    <section id="notes-section" style="display:none;"><h2>Ders Notları</h2><p>Burada ders notların yer alacak...</p></section>
+    <section id="movies-section" style="display:none;"><h2>Filmler</h2><p>İzlediğim ve önerdiğim filmler...</p></section>
+</main>
+
+<div id="logModal">
+    <span class="close-btn" onclick="toggleLogs()">Kapat [X]</span>
+    <h2>Proje Günlükleri (ChangeLog)</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Tarih</th>
+                <th>Versiyon</th>
+                <th>Yapılan Değişiklikler</th>
+            </tr>
+        </thead>
+        <tbody id="logTableBody">
+            <tr>
+                <td>07.02.2024</td>
+                <td>1.0.2</td>
+                <td>Yılan oyunu ve Tetris mekanikleri eklendi.</td>
+            </tr>
+            <tr>
+                <td>06.02.2024</td>
+                <td>1.0.1</td>
+                <td>Menü yapısı ve responsive tasarım oluşturuldu.</td>
+            </tr>
+            <tr>
+                <td>05.02.2024</td>
+                <td>1.0.0</td>
+                <td>Proje başlangıcı ve temel HTML iskeleti.</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<script>
+    // Menü Yönetimi
+    function showSection(section) {
+        document.querySelectorAll('main > section').forEach(s => s.style.display = 'none');
+        document.getElementById(section + '-section').style.display = 'block';
+    }
+
+    function toggleLogs() {
+        const modal = document.getElementById('logModal');
+        modal.style.display = (modal.style.display === 'block') ? 'none' : 'block';
+    }
+
+    // --- YILAN OYUNU MANTIGI ---
+    let canvas = document.getElementById("gameCanvas");
+    let ctx = canvas.getContext("2d");
+    let gameInterval;
+
+    function startSnake() {
+        document.getElementById('game-canvas-wrapper').style.display = 'block';
+        document.getElementById('game-title').innerText = "Yılan Oyunu";
+        clearInterval(gameInterval);
+        
+        let box = 20;
+        let snake = [{x: 9 * box, y: 10 * box}];
+        let food = { x: Math.floor(Math.random()*19+1)*box, y: Math.floor(Math.random()*19+1)*box };
+        let d;
+
+        document.addEventListener("keydown", direction);
+        function direction(event) {
+            if(event.keyCode == 37 && d != "RIGHT") d = "LEFT";
+            else if(event.keyCode == 38 && d != "DOWN") d = "UP";
+            else if(event.keyCode == 39 && d != "LEFT") d = "RIGHT";
+            else if(event.keyCode == 40 && d != "UP") d = "DOWN";
+        }
+
+        function draw() {
+            ctx.fillStyle = "black";
+            ctx.fillRect(0,0,400,400);
+            for(let i=0; i<snake.length; i++) {
+                ctx.fillStyle = (i==0) ? "green" : "lime";
+                ctx.fillRect(snake[i].x, snake[i].y, box, box);
+            }
+            ctx.fillStyle = "red";
+            ctx.fillRect(food.x, food.y, box, box);
+
+            let snakeX = snake[0].x;
+            let snakeY = snake[0].y;
+
+            if(d == "LEFT") snakeX -= box;
+            if(d == "UP") snakeY -= box;
+            if(d == "RIGHT") snakeX += box;
+            if(d == "DOWN") snakeY += box;
+
+            if(snakeX == food.x && snakeY == food.y) {
+                food = { x: Math.floor(Math.random()*19+1)*box, y: Math.floor(Math.random()*19+1)*box };
+            } else {
+                snake.pop();
+            }
+
+            let newHead = {x: snakeX, y: snakeY};
+
+            if(snakeX < 0 || snakeX >= 400 || snakeY < 0 || snakeY >= 400 || collision(newHead, snake)) {
+                clearInterval(gameInterval);
+                alert("Oyun Bitti!");
+            }
+            snake.unshift(newHead);
+        }
+        function collision(head, array) {
+            for(let i=0; i<array.length; i++) if(head.x == array[i].x && head.y == array[i].y) return true;
+            return false;
+        }
+        gameInterval = setInterval(draw, 100);
+    }
+
+    function startTetris() {
+        document.getElementById('game-canvas-wrapper').style.display = 'block';
+        document.getElementById('game-title').innerText = "Tetris (Basit Sürüm)";
+        ctx.fillStyle = "black";
+        ctx.fillRect(0,0,400,400);
+        ctx.fillStyle = "white";
+        ctx.fillText("Tetris Yükleniyor... Tuşları Kontrol Et!", 130, 200);
+        // Tetris mantığı buraya eklenebilir veya harici bir JS çağrılabilir.
+    }
+</script>
+
+</body>
+</html>
