--- a/index.html
+++ b/index.html
@@ -2,126 +2,169 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Arcade Oyun Dünyası</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kişisel Portfolyo ve Oyun Dünyası</title>
 
 <style>
 :root{
-  --bg:#0f172a;
-  --panel:#020617;
-  --neon:#22d3ee;
-  --text:#e5e7eb;
+ --primary:#2563eb;
+ --dark:#020617;
+ --light:#f8fafc;
+ --accent:#22d3ee;
 }
 body{
-  margin:0;
-  font-family:Segoe UI,Arial;
-  background:var(--bg);
-  color:var(--text);
+ margin:0;
+ font-family:Segoe UI,Tahoma;
+ background:var(--light);
+ color:#0f172a;
 }
 header{
-  background:#020617;
-  padding:15px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+ background:var(--dark);
+ color:white;
+ padding:1rem 2rem;
+ display:flex;
+ justify-content:space-between;
+ align-items:center;
+ position:sticky;
+ top:0;
+ z-index:1000;
 }
-nav a{
-  margin:0 10px;
-  cursor:pointer;
-  color:var(--neon);
-  text-decoration:none;
+.nav-links{display:flex;gap:20px;}
+.nav-links a{color:white;text-decoration:none;cursor:pointer;}
+.nav-links a:hover{color:var(--accent);}
+main{padding:2rem;max-width:1000px;margin:auto;}
+.hero{text-align:center;padding:3rem 0;}
+
+.game-menu{display:flex;justify-content:center;gap:20px;margin-bottom:20px;}
+.game-card{
+ cursor:pointer;
+ border:2px solid #ddd;
+ padding:10px;
+ border-radius:8px;
+ width:120px;
+ text-align:center;
 }
-main{padding:20px;}
+.game-card:hover{border-color:var(--primary);background:#e2e8f0;}
+
 canvas{
-  background:black;
-  border:4px solid var(--neon);
-  margin:auto;
-  display:block;
+ background:black;
+ display:block;
+ margin:auto;
+ border:4px solid #0f172a;
 }
-.game-container{text-align:center;}
+
 .scorebar{
-  display:flex;
-  justify-content:space-around;
-  margin:10px 0;
-  font-weight:bold;
+ display:flex;
+ justify-content:space-around;
+ font-weight:bold;
+ margin:10px 0;
 }
+
 .mobile-controls{
-  display:none;
-  justify-content:center;
-  gap:10px;
-  margin-top:10px;
+ display:none;
+ justify-content:center;
+ gap:10px;
+ margin-top:10px;
 }
 .mobile-controls button{
-  font-size:24px;
-  padding:10px 15px;
+ font-size:22px;
+ padding:8px 14px;
 }
+
 @media(max-width:768px){
-  .mobile-controls{display:flex;}
+ .mobile-controls{display:flex;}
 }
+
+.game-container{text-align:center;display:none;}
 </style>
 </head>
 
 <body>
 
 <header>
-  <b>🎮 Arcade Oyun Dünyası</b>
-  <nav>
-    <a onclick="show('home')">Ana Sayfa</a>
-    <a onclick="show('games')">Oyunlar</a>
-  </nav>
+ <strong>Hazırlayan: YourRenz</strong>
+ <nav class="nav-links">
+  <a onclick="showSection('home')">Ana Sayfa</a>
+  <a onclick="showSection('games')">Oyunlar</a>
+  <a onclick="showSection('notes')">Ders Notları</a>
+  <a onclick="showSection('movies')">Filmler</a>
+ </nav>
 </header>
 
 <main>
 
-<section id="home">
-<h2>Hoş Geldin 👋</h2>
-<p>Pacman • Snake • Tetris</p>
+<section id="home-section">
+ <div class="hero">
+  <h1>Hoş Geldiniz 👋</h1>
+  <p>Bu site kişisel portfolyo ve oyun projelerimi içerir.</p>
+ </div>
 </section>
 
-<section id="games" style="display:none">
-<div class="game-container">
-<h2 id="title">Pacman</h2>
+<section id="games-section" style="display:none">
+ <h2 style="text-align:center">Oyun Salonu</h2>
 
-<div class="scorebar">
-<div>Skor: <span id="score">0</span></div>
-<div>Rekor: <span id="best">0</span></div>
-<div>❤️ <span id="lives">3</span></div>
-</div>
+ <div class="game-menu">
+  <div class="game-card" onclick="startGame('pacman')">👻 Pacman</div>
+  <div class="game-card" onclick="startGame('snake')">🐍 Snake</div>
+  <div class="game-card" onclick="startGame('tetris')">🧱 Tetris</div>
+ </div>
 
-<canvas id="game" width="420" height="420"></canvas>
+ <div id="gameWrapper" class="game-container">
+  <h3 id="gameTitle"></h3>
 
-<div class="mobile-controls">
-<button onclick="move(0,-1)">⬆️</button>
-<button onclick="move(-1,0)">⬅️</button>
-<button onclick="move(1,0)">➡️</button>
-<button onclick="move(0,1)">⬇️</button>
-</div>
-</div>
+  <div class="scorebar">
+   <div>Skor: <span id="score">0</span></div>
+   <div>Rekor: <span id="best">0</span></div>
+   <div>❤️ <span id="lives">3</span></div>
+  </div>
+
+  <canvas id="gameCanvas" width="420" height="420"></canvas>
+
+  <div class="mobile-controls">
+   <button onclick="setDir(0,-1)">⬆️</button>
+   <button onclick="setDir(-1,0)">⬅️</button>
+   <button onclick="setDir(1,0)">➡️</button>
+   <button onclick="setDir(0,1)">⬇️</button>
+  </div>
+ </div>
+</section>
+
+<section id="notes-section" style="display:none">
+ <h2>Ders Notları</h2>
+ <p>Buraya ders notları eklenecek.</p>
+</section>
+
+<section id="movies-section" style="display:none">
+ <h2>Filmler</h2>
+ <p>Film listesi burada olacak.</p>
 </section>
 
 </main>
 
 <script>
-/* --- SAYFA --- */
-function show(id){
- document.querySelectorAll("section").forEach(s=>s.style.display="none");
- document.getElementById(id).style.display="block";
+/* ====== SAYFA YÖNETİMİ ====== */
+function showSection(id){
+ document.querySelectorAll("main section").forEach(s=>s.style.display="none");
+ document.getElementById(id+"-section").style.display="block";
+ stopGame();
 }
 
-/* --- CHANGELOG --- */
-function addLog(v,t){
- let logs=JSON.parse(localStorage.getItem("logs"))||[];
- logs.unshift({d:new Date().toLocaleDateString("tr-TR"),v,t});
- localStorage.setItem("logs",JSON.stringify(logs));
-}
-addLog("1.2.0","Pacman can, skor, rekor, mobil kontrol ve AI eklendi");
-
-/* --- PACMAN --- */
-const canvas=document.getElementById("game");
+/* ====== OYUN ORTAK ====== */
+const canvas=document.getElementById("gameCanvas");
 const ctx=canvas.getContext("2d");
-const tile=20;
+let interval=null;
+let currentGame=null;
 
-let map=[
+function stopGame(){
+ if(interval) clearInterval(interval);
+ interval=null;
+}
+
+/* ====== PACMAN ====== */
+const tile=20;
+let pac,ghost,map,dir,score,lives,best;
+
+const baseMap=[
 "1111111111111111111",
 "1000000000100000001",
 "1011110110101111101",
@@ -135,22 +178,79 @@ let map=[
 "1111111111111111111"
 ];
 
-let pac={x:1,y:1,dx:0,dy:0};
-let ghost={x:9,y:5};
-let score=0;
-let lives=3;
-let best=localStorage.getItem("pacbest")||0;
+function startGame(type){
+ stopGame();
+ currentGame=type;
+ document.getElementById("gameWrapper").style.display="block";
 
-document.getElementById("best").innerText=best;
+ if(type==="pacman") startPacman();
+}
 
-function draw(){
+function startPacman(){
+ document.getElementById("gameTitle").innerText="Pacman";
+ map=baseMap.map(r=>r.split(""));
+ pac={x:1,y:1};
+ ghost={x:9,y:5};
+ dir={x:0,y:0};
+ score=0;
+ lives=3;
+ best=localStorage.getItem("pacBest")||0;
+ document.getElementById("best").innerText=best;
+ document.getElementById("lives").innerText=lives;
+
+ interval=setInterval(updatePacman,200);
+ drawPacman();
+}
+
+function setDir(x,y){dir={x,y};}
+
+document.addEventListener("keydown",e=>{
+ if(e.key==="ArrowUp")setDir(0,-1);
+ if(e.key==="ArrowDown")setDir(0,1);
+ if(e.key==="ArrowLeft")setDir(-1,0);
+ if(e.key==="ArrowRight")setDir(1,0);
+});
+
+function updatePacman(){
+ let nx=pac.x+dir.x;
+ let ny=pac.y+dir.y;
+ if(map[ny][nx]==="0"){
+  pac.x=nx;pac.y=ny;
+  score+=10;
+  map[ny][nx]="2";
+ }
+
+ // ghost takip
+ if(ghost.x<pac.x) ghost.x++;
+ else if(ghost.x>pac.x) ghost.x--;
+ if(ghost.y<pac.y) ghost.y++;
+ else if(ghost.y>pac.y) ghost.y--;
+
+ if(pac.x===ghost.x && pac.y===ghost.y){
+  lives--;
+  document.getElementById("lives").innerText=lives;
+  pac={x:1,y:1};
+  if(lives<=0){
+   if(score>best){
+    localStorage.setItem("pacBest",score);
+   }
+   alert("Oyun Bitti! Skor: "+score);
+   stopGame();
+  }
+ }
+
+ document.getElementById("score").innerText=score;
+ drawPacman();
+}
+
+function drawPacman(){
  ctx.clearRect(0,0,canvas.width,canvas.height);
  for(let y=0;y<map.length;y++){
   for(let x=0;x<map[y].length;x++){
-   if(map[y][x]=="1"){
+   if(map[y][x]==="1"){
     ctx.fillStyle="blue";
     ctx.fillRect(x*tile,y*tile,tile,tile);
-   }else{
+   }else if(map[y][x]==="0"){
     ctx.fillStyle="white";
     ctx.beginPath();
     ctx.arc(x*tile+10,y*tile+10,3,0,Math.PI*2);
@@ -158,61 +258,16 @@ function draw(){
    }
   }
  }
- // pacman
  ctx.fillStyle="yellow";
  ctx.beginPath();
  ctx.arc(pac.x*tile+10,pac.y*tile+10,9,0,Math.PI*2);
  ctx.fill();
 
- // ghost
  ctx.fillStyle="red";
  ctx.beginPath();
  ctx.arc(ghost.x*tile+10,ghost.y*tile+10,9,0,Math.PI*2);
  ctx.fill();
 }
-
-function move(dx,dy){pac.dx=dx;pac.dy=dy;}
-
-document.addEventListener("keydown",e=>{
- if(e.key=="ArrowUp")move(0,-1);
- if(e.key=="ArrowDown")move(0,1);
- if(e.key=="ArrowLeft")move(-1,0);
- if(e.key=="ArrowRight")move(1,0);
-});
-
-function update(){
- let nx=pac.x+pac.dx;
- let ny=pac.y+pac.dy;
- if(map[ny][nx]=="0"){
-  pac.x=nx;pac.y=ny;
-  score+=10;
-  map[ny]=map[ny].substring(0,nx)+"2"+map[ny].substring(nx+1);
- }
- // ghost takip
- if(ghost.x<pac.x)ghost.x++;
- else if(ghost.x>pac.x)ghost.x--;
- if(ghost.y<pac.y)ghost.y++;
- else if(ghost.y>pac.y)ghost.y--;
-
- if(pac.x==ghost.x && pac.y==ghost.y){
-  lives--;
-  document.getElementById("lives").innerText=lives;
-  pac.x=1;pac.y=1;
-  if(lives<=0){
-   if(score>best){
-    best=score;
-    localStorage.setItem("pacbest",best);
-   }
-   alert("Oyun Bitti! Skor: "+score);
-   location.reload();
-  }
- }
- document.getElementById("score").innerText=score;
- draw();
-}
-
-setInterval(update,200);
-draw();
 </script>
 
 </body>
